[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clarifyrag"
version = "0.1.0"
description = "A clarification-aware search agent that asks before it answers when a query is ambiguous."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ahmed Doghri" }]
keywords = ["llm", "agents", "rag", "search", "clarification", "retrieval", "ai"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/ahmeddoghri/clarifyrag"

[tool.hatch.build.targets.wheel]
packages = ["clarifyrag"]

[tool.pytest.ini_options]
testpaths = ["tests"]
